tests/bonsai/error/token_type.bonsai
func me_parsed_wrong(i : i32) -> 42;
